--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="webmain.html">Nhan vao</a>
+    <a href="../html/webmain.html">Nhan vao</a>
 </body>
 </html>
